k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
    app: myapp
    environment: development
